versioned_docs/version-4.0.2/系统配置手册/列表管理器/资产.md

import useBaseUrl from '@docusaurus/useBaseUrl';

在rockwelltpm企业移动现场作业管理软件中，使用**列表管理器**的**资产**选项卡来管理生产活动中的相关设备或者逻辑设备。资产可以包含**资产**，这些**资产**数据在**资产**选项卡内以树状视图的形式存在。

**资产**可以配置自定义的属性称为**资产属性**。**资产**所属**资产类别**的属性将自动添加到**资产属性**中。

可以通过所属**组织单元**选项卡查看管理此**资产**的**组织单元**。

## 配置资产

* 在**导航栏→列表管理器→资产**内右键**演示-资产**，在快捷菜单中即可完成**资产**的新建、删除、重命名、配置属性、剪切、复制、粘贴、全部展开、全部收起、排序、验证、导入和导出操作。

  <img alt=" " src={useBaseUrl('docimg/资产1.png')} />

## 新建资产

* 在**导航栏→列表管理器→资产**内选择**演示-资产**，右击，在快捷菜单中选择新建。

  <img alt=" " src={useBaseUrl('docimg/资产2.png')} />

* 选中新资产，在右边属性栏编辑各属性。**资产**右边属性框配置示例，如图：

  <img alt=" " src={useBaseUrl('docimg/资产3.png')} />

  * **资产名**：设定资产的名称。
  * **资产号**：设定资产编码。此编码在需要使用现场手持终端扫描时为资产的条形码或RFID编码等。
  * **资产描述**：资产的相关说明文字。
  * **资产类别**：选择相应的资产类别。空表示不属于任何资产类别的资产。
  * **位置点**：勾选位置点，可将此资产的位置定义为一个系统的位置标记。
  * **位置名称**：资产位置所代表的位置标记的名称。
  * **扫描点**：勾选此选项表示资产设置了条形码或RFID编码，此编码应该与资产号相同。
  * **无感解锁精度（单位厘米）**：自动解锁的精度，达到该精度可实现自动解锁作业任务。
  * **使用资产类别关联物料**：关联物料时，可勾选使用该资产的资产类别来关联。
  * **关联物料**：为该资产关联上物料。若勾选使用资产类别则没有此选项。

## 配置资产属性

* 选中某**资产**，右击，在快捷菜单栏中选择配置属性，在主工作区出现**资产属性**配置对话框。具体配置方法与**资产类别**属性对话框相同。在这里只详细说一下外部属性的配置。

* 在资产和资产类别属性中都可以配置外部属性，使用此功能需安装Thingsboard（开源的物联网平台），Windows系统安装请参考：[在Windows上安装ThingsBoard](https://thingsboard.io/docs/user-guide/install/windows/)

* 在SMC的系统设置-服务中，找到Thingsboard一栏，点击启用，填写相关信息，保存即可

  <img alt=" " src={useBaseUrl('docimg/waibushuxing1.png')} />

* 在SDC中，打开资产类型和资产的属性，可以看到新增了外部属性选项，勾选上后，服务运行的情况下，该资产会在Thingsboard的设备中自动创建出来，可以在thingsboard中为该设备配置出遥测属性，属性名称请与SDC中该资产属性名称一致，如何配置请查看
<a href={useBaseUrl('docattachment/TB配置遥测属性.docx')} target="_blank">TB配置遥测属性</a>

  <img alt=" " src={useBaseUrl('docimg/waibushuxing2.png')} />

* 从Thingsboard中拿到的值会实时更新到资产属性中
  * 画面监控中配置该资产及其属性可以看到数据的实时变化
    <img alt=" " src={useBaseUrl('docimg/waibushuxing3.png')} />

  * 在EOC上的资产总览-属性中，刷新可看到数据在变化，可以在历史趋势和表格里看所有记录
  <img alt=" " src={useBaseUrl('docimg/waibushuxing4.png')} />

  * 终端上使用该资产属性值作为配置拿到的也是实时的值
    <img alt=" " src={useBaseUrl('docimg/waibushuxing5.png')} />

* 数据类型为文件、多选列表、Json字符串时，不支持选择外部属性

* 在EOC和终端修改属性值，之后再看到的就是修改后的值，实际场景中设备的属性数据是会通过http、mqtt、CoAP、modbus等等设备连接协议进行传送的实时数据